--- a/agijagi/app/src/main/res/layout/fragment_order_made_category.xml
+++ b/agijagi/app/src/main/res/layout/fragment_order_made_category.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".category.CategoryFragment">
+    tools:context=".category.OrderMadeCategoryFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar_cateforyfragment_toolbar"
