--- a/agijagi/app/src/main/res/layout/fragment_shopping_list.xml
+++ b/agijagi/app/src/main/res/layout/fragment_shopping_list.xml
@@ -13,7 +13,9 @@
         android:theme="@style/Theme.AgijagiToolbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/arrow_back_24px"
+        app:title="장바구니" />
 
 
     <com.google.android.material.checkbox.MaterialCheckBox
