Design: 홈 화면 연결 #56 툴바: 검색 -> 검색화면, 장바구니 -> 장바구니 화면 주문제작상품보기 버튼 -> 주문제작상품 카테고리 화면 menu_homefragment.xml 컨벤션 따라 파일 이름 변경 fragment_home.xml, menu_home.xml 컨벤션 따라 view id 변경

--- a/agijagi/app/src/main/res/menu/menu_home.xml
+++ b/agijagi/app/src/main/res/menu/menu_home.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/search"
+        android:id="@+id/menu_home_search"
         android:enabled="true"
         android:icon="@drawable/search_24px"
         android:title="검색창"
